2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Signatures/GenericArg.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil.Binary/CopyImageVisitor.cs
	* Mono.Cecil.Binary/ImageInitializer.cs
	* Mono.Cecil.Binary/ImageReader.cs
	* Mono.Cecil.Binary/ImageWriter.cs
	* Mono.Cecil.Binary/ResourceReader.cs
	* Mono.Cecil.Binary/ResourceWriter.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil.Metadata/CultureUtils.cs
	* Mono.Cecil.Metadata/MetadataInitializer.cs
	* Mono.Cecil.Metadata/MetadataReader.cs
	* Mono.Cecil.Metadata/MetadataRowReader.cs
	* Mono.Cecil.Metadata/MetadataRowWriter.cs
	* Mono.Cecil.Metadata/MetadataTableReader.cs
	* Mono.Cecil.Metadata/Utilities.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil.Cil/CodeReader.cs
	* Mono.Cecil.Cil/OpCodeNames.cs
	* Mono.Cecil.Cil/CodeWriter.cs
	* Mono.Cecil.Cil/SymbolStoreHelper.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil/SecurityDeclarationReader.cs
	* Mono.Cecil/NullReferenceImporter.cs
	* Mono.Cecil/TableComparers.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil/AssemblyNameReference.cs:
		Use String.Length > 0 instead of comparing to String.Empty
		[Found using Gendarme CompareWithEmptyStringEfficientlyRule]

	* Mono.Cecil.Metadata/MetadataToken.cs:
		Add a private Equals(MetadataToken) method. This allows the 
		existing operators (== and !=) to avoid boxing, since they
		will prefer it to the Equals(object) method.
		[Found using Gendarme ImplementEqualsTypeRule]

	* Mono.Cecil.Cil/GuidAttribute.cs:
		Seal attribute class
		[Found using Gendarme AvoidUnsealedConcreteAttributesRule]

	* Mono.Cecil.Signatures/SignatureWriter.cs:
		Fix typo.